--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -11,7 +11,7 @@
     "**From docker.**\n",
     "Pull docker using docker \n",
     "        \n",
-    "        pull jxhhhh/janusq:0.1\n",
+    "        docker pull jxhhhh/janusq:latest\n",
     "\n",
     "The code is in \"/home/JanusQ-main\". The examples that can be directly run is in \"/home/JanusQ-main/examples\"\n",
     "\n",
