--- a/examples/2-1.vectorization.ipynb
+++ b/examples/2-1.vectorization.ipynb
@@ -25,7 +25,7 @@
     "%matplotlib inline\n",
     "\n",
     "import logging\n",
-    "logging.basicConfig(level=logging.INFO)\n",
+    "logging.basicConfig(level=logging.WARN)\n",
     "import sys\n",
     "sys.path.append('..')\n",
     "import os\n",
