docker fist commit

--- a/examples/2-5.unitary_decomposition.ipynb
+++ b/examples/2-5.unitary_decomposition.ipynb
@@ -26,8 +26,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-15 03:05:58,927\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67096576 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-15 03:05:59,074\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-04-15 12:04:54,368\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67088384 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2024-04-15 12:04:54,510\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_qubits = 5\n",
+    "n_qubits = 4\n",
     "backend = LinearBackend(n_qubits, 1, basis_two_gates = ['crz'])"
    ]
   },
@@ -78,16 +78,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 6/6 [00:01<00:00,  5.03it/s]\n"
+      "100%|██████████| 6/6 [00:02<00:00,  2.80it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "len(Us) =  908 len(gate_vecs) =  908\n",
+      "len(Us) =  819 len(gate_vecs) =  819\n",
       "Start construct U2VMdoel\n",
-      "Finish construct U2VMdoel, costing 1.0097696781158447s\n"
+      "Finish construct U2VMdoel, costing 1.0849368572235107s\n"
      ]
     }
    ],
@@ -120,302 +120,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:36<00:00, 36.48s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solution_dist 0.7752003053595566\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "([[{'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 1.06732195,  0.03832288, -1.06242122])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([ 0.59243734, -0.71862772, -1.97539851])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.25061961,  0.567795  , -1.49902032])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 1.76437042,  0.56609617, -0.13560375])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([2.67875337])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 1.67755176, -0.85300067,  0.56609617])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([1.91920659, 0.30432193, 0.567795  ])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 4], 'params': array([3.56569964])},\n",
-       "   {'name': 'crz', 'qubits': [1, 3], 'params': array([1.54405228])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 2.91358333, -0.25916134, -0.85300067])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-3.09318713, -1.48271813, -0.71862772])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.17247864, -1.59643995,  0.30432193])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.06285899,  0.36704965,  0.03832288])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([1.62133994])},\n",
-       "   {'name': 'crz', 'qubits': [1, 2], 'params': array([1.85789919])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-1.45621334,  0.20270675,  0.66714278])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.69959557, -0.25317965, -0.13320787])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([ 1.25881174, -0.0729855 , -0.72577664])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-2.1547437 ,  0.76711641, -0.10481668])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 4], 'params': array([3.49964158])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-1.42989905,  0.26658854,  0.20270675])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([2.59412889, 1.83239672, 0.93282713])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([-1.21865127])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([1.88454408, 0.98730826, 0.26658854])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.69497364,  2.13754955, -0.25317965])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([-2.142006])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 2.01960856, -0.2885154 ,  0.98730826])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 0.57726666, -1.00026013,  2.1408428 ])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 4], 'params': array([1.83308554])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 1.53924689, -0.97254967, -0.02629097])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-0.20796636, -0.85479705,  0.12714134])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 2], 'params': array([1.8792326])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([ 1.06900826, -0.43582169, -0.85479705])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 0.51427614, -0.03608032,  0.79759789])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([2.32366334])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-0.8354506 , -0.59379042, -0.94243637])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.10303036,  0.36653747, -0.03608032])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([1.67694565])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [0],\n",
-       "    'params': array([ 1.1489726 , -0.45558345,  0.00116465])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.6686056 ,  1.59918328, -1.10128929])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-3.05100339, -1.6434771 ,  1.01725821])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 3.89687198,  0.31730223, -1.22894219])}],\n",
-       "  [{'name': 'crz', 'qubits': [0, 1], 'params': array([3.96995179])},\n",
-       "   {'name': 'crz', 'qubits': [2, 3], 'params': array([3.04499816])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 0.52395593,  2.89756015, -2.17896805])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [0],\n",
-       "    'params': array([-1.47601973, -0.32282645, -0.45558345])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-0.44432109, -1.76565266,  0.31730223])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([ 0.70575557,  0.20217342, -1.6434771 ])}],\n",
-       "  [{'name': 'crz', 'qubits': [0, 3], 'params': array([-2.89325459])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 1.91726306,  2.55479987, -4.17414202])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [0],\n",
-       "    'params': array([ 2.08431062, -2.41606837, -0.32282645])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([2.85780422])},\n",
-       "   {'name': 'crz', 'qubits': [0, 2], 'params': array([1.13244071])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 1.70395012, -1.56199224, -0.46856168])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.20207954, -1.19964626,  0.48114034])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([0.65474859, 0.61078251, 1.03318532])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [0],\n",
-       "    'params': array([ 0.74041089,  0.24925427, -1.6822266 ])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 3], 'params': array([2.28147664])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-0.261046  , -1.03802996, -1.56199224])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-2.01626548, -1.60701635,  0.61078251])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 2], 'params': array([1.93555388])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-1.54776329, -0.98939441, -1.60701635])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 2.20257163,  0.45346233, -1.19964626])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([3.24589499])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 1.61272988, -0.0944207 , -1.03802996])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 0.5711783 , -0.31210244,  0.45346233])}],\n",
-       "  [{'name': 'crz', 'qubits': [0, 3], 'params': array([-3.67049744])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-0.90687092, -0.83881597, -0.0944207 ])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [0],\n",
-       "    'params': array([ 0.27085455, -0.53935775,  0.24925427])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([2.56327065])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 1.23761978,  0.38555237, -0.83881597])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.99207928,  0.83115679, -0.31210244])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 3], 'params': array([-2.37658501])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 1.25660125, -0.11281694,  2.53726239])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-1.57162823, -0.34595664,  0.90417746])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([ 1.88257058, -0.87634027, -0.12442112])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 0.81267195, -1.93177868,  1.12667043])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([-2.52367781])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-1.48900288,  0.52394658, -1.93177868])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-2.32315005, -0.27919027, -0.87634027])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 4], 'params': array([3.31614383])},\n",
-       "   {'name': 'crz', 'qubits': [1, 3], 'params': array([-1.99841147])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-1.62597221,  0.35189905,  0.52394658])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([ 1.04832873,  1.19840501, -0.34595664])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.56549371,  2.00533277, -0.27919027])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 1.05133516, -0.17828523, -0.11281694])}],\n",
-       "  [{'name': 'crz', 'qubits': [3, 4], 'params': array([-2.06040578])},\n",
-       "   {'name': 'crz', 'qubits': [1, 2], 'params': array([-3.08279778])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-1.6639294 , -1.44817832,  1.16120638])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.34954273,  0.87108233, -0.1935086 ])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-1.35322169, -1.71107605,  1.2024348 ])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-0.2536124 ,  0.39815822, -0.25764891])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([2.33553696])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-2.26288946, -2.83985964,  0.87108233])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 1.83512485, -1.38249423,  0.39815822])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 4], 'params': array([2.86636258])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([-2.24105027,  0.50442786, -1.44817832])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-1.09165349,  1.34465492, -1.38249423])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 4], 'params': array([1.35684566])},\n",
-       "   {'name': 'crz', 'qubits': [1, 3], 'params': array([0.65796867])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 1.85431244,  0.06467958, -0.43814317])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-1.6144096 ,  0.46894104, -0.40863655])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-1.65813233,  0.66327885, -1.15505875])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([-4.16414011,  0.08401932,  0.74517554])}],\n",
-       "  [{'name': 'crz', 'qubits': [2, 3], 'params': array([-1.63612849])},\n",
-       "   {'name': 'crz', 'qubits': [1, 4], 'params': array([2.66008783])}],\n",
-       "  [{'name': 'u',\n",
-       "    'qubits': [3],\n",
-       "    'params': array([-0.33351839,  0.72706804,  0.66327885])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [2],\n",
-       "    'params': array([-0.8518509 ,  0.04311387,  0.46894104])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [4],\n",
-       "    'params': array([ 1.37690432, -3.49571272,  0.06467958])},\n",
-       "   {'name': 'u',\n",
-       "    'qubits': [1],\n",
-       "    'params': array([ 1.33738207, -0.14334092,  0.08401932])}],\n",
-       "  [{'name': 'crz', 'qubits': [1, 3], 'params': array([1.37407614])}]],\n",
-       " 309.58478021621704)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# generate a random unitary\n",
     "unitary = random_unitary(2**n_qubits).data\n",
@@ -425,12 +130,12 @@
     "quct_circuit = decompose(unitary, allowed_dist = 0.2, backend = backend, u2v_model = u2v_model)\n",
     "quct_time = time.time() - start_time\n",
     "\n",
-    "quct_circuit,quct_time"
+    "str(quct_circuit),quct_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1719,12 +1424,12 @@
     "qsd_circuit = qiskit_to_circuit(qc)\n",
     "qsd_time = time.time() - start_time\n",
     "\n",
-    "qsd_circuit,qsd_time"
+    "str(qsd_circuit),qsd_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
