--- a/examples/2-1.vectorization.ipynb
+++ b/examples/2-1.vectorization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,33 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ┌──────────────┐   ░  ┌──────────────────┐ ░                          »\n",
-      "q_0: ───┤ U(2π,π,6π/5) ├───░──┤ U(6π/5,2π/5,π/5) ├─░───■──────────────────────»\n",
-      "      ┌─┴──────────────┴─┐ ░ ┌┴──────────────────┤ ░   │  ┌──────────────────┐»\n",
-      "q_1: ─┤ U(π/5,7π/5,π/10) ├─░─┤ U(3π/5,9π/5,4π/5) ├─░───┼──┤ U(π/5,2π/5,4π/5) ├»\n",
-      "     ┌┴──────────────────┤ ░ └───────────────────┘ ░ ┌─┴─┐└──────────────────┘»\n",
-      "q_2: ┤ U(9π/5,3π/5,6π/5) ├─░───────────────────────░─┤ X ├────────────────────»\n",
-      "     ├───────────────────┤ ░                       ░ └───┘                    »\n",
-      "q_3: ┤ U(9π/5,8π/5,2π/5) ├─░───────────────────────░──────────────────────────»\n",
-      "     └───────────────────┘ ░                       ░                          »\n",
-      "«      ░       ░       ░ \n",
-      "«q_0: ─░───────░───────░─\n",
-      "«      ░       ░       ░ \n",
-      "«q_1: ─░───────░───────░─\n",
-      "«      ░       ░       ░ \n",
-      "«q_2: ─░───■───░───■───░─\n",
-      "«      ░ ┌─┴─┐ ░ ┌─┴─┐ ░ \n",
-      "«q_3: ─░─┤ X ├─░─┤ X ├─░─\n",
-      "«      ░ └───┘ ░ └───┘ ░ \n",
-      "target gate: {'name': 'u', 'qubits': [1], 'params': [0.6283185307179586, 1.2566370614359172, 2.5132741228718345]}\n",
-      "generate paths: {'u,1-former-u,0', 'u,1-parallel-cx,0,2-next-cx,2,3', 'u,1', 'u,1-parallel-cx,0,2-former-u,0', 'u,1-next-cx,2,3', 'u,1-parallel-cx,0,2-former-u,1', 'u,1-parallel-cx,0,2', 'u,1-former-u,1'}\n"
+      "       ┌────────────────┐  ░ ┌───────────────────┐ ░ ┌────────────────┐ ░      »\n",
+      "q_0: ──┤ U(π/10,π,9π/5) ├──░─┤ U(8π/5,7π/5,9π/5) ├─░─┤ U(8π/5,9π/5,π) ├─░───■──»\n",
+      "     ┌─┴────────────────┴┐ ░ ├───────────────────┤ ░ └────────────────┘ ░   │  »\n",
+      "q_1: ┤ U(9π/5,7π/5,7π/5) ├─░─┤ U(2π/5,7π/5,9π/5) ├─░────────────────────░───┼──»\n",
+      "     └─┬────────────────┬┘ ░ └┬──────────────────┤ ░                    ░ ┌─┴─┐»\n",
+      "q_2: ──┤ U(9π/5,π,8π/5) ├──░──┤ U(π/5,7π/5,9π/5) ├─░─────────■──────────░─┤ X ├»\n",
+      "      ┌┴────────────────┤  ░  └──────────────────┘ ░       ┌─┴─┐        ░ └───┘»\n",
+      "q_3: ─┤ U(6π/5,7π/5,2π) ├──░───────────────────────░───────┤ X ├────────░──────»\n",
+      "      └─────────────────┘  ░                       ░       └───┘        ░      »\n",
+      "«      ░ \n",
+      "«q_0: ─░─\n",
+      "«      ░ \n",
+      "«q_1: ─░─\n",
+      "«      ░ \n",
+      "«q_2: ─░─\n",
+      "«      ░ \n",
+      "«q_3: ─░─\n",
+      "«      ░ \n",
+      "target gate: {'name': 'cx', 'qubits': [0, 2], 'params': []}\n",
+      "generate paths: {'cx,0,2-former-u,0', 'cx,0,2-former-u,0-former-u,1', 'cx,0,2', 'cx,0,2-former-u,0-parallel-cx,2,3', 'cx,0,2-former-cx,2,3', 'cx,0,2-former-u,0-former-u,2', 'cx,0,2-former-u,0-former-u,0'}\n"
      ]
     }
    ],
@@ -127,30 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:root:start random walk for 102 circuits\n",
-      "100%|██████████| 102/102 [00:01<00:00, 90.91it/s]\n",
-      "INFO:root:count path\n",
-      "INFO:root:device size after random walk = 13\n",
-      "INFO:root:0's path table size = 37\n",
-      "INFO:root:1's path table size = 36\n",
-      "INFO:root:2's path table size = 37\n",
-      "INFO:root:3's path table size = 37\n",
-      "INFO:root:4's path table size = 36\n",
-      "INFO:root:5's path table size = 37\n",
-      "INFO:root:(0, 1)'s path table size = 32\n",
-      "INFO:root:(1, 2)'s path table size = 32\n",
-      "INFO:root:(3, 4)'s path table size = 32\n",
-      "INFO:root:(0, 3)'s path table size = 33\n",
-      "INFO:root:(1, 4)'s path table size = 31\n",
-      "INFO:root:(4, 5)'s path table size = 32\n",
-      "INFO:root:(2, 5)'s path table size = 33\n"
+      "100%|██████████| 102/102 [00:01<00:00, 85.14it/s]"
      ]
     },
     {
@@ -158,6 +142,13 @@
      "output_type": "stream",
      "text": [
       "length of the path table is 445\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -189,15 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
-      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+      "vector is [0.5 0.5 0.  0.5 1.  0.5 0.  0.5 0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.5 0.  0.  0.5 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      " 0. ]\n"
      ]
     }
    ],
@@ -222,14 +214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9] = [9]\n"
+      "[0, 1, 3, 4, 5, 7, 12, 20, 23] = [0, 1, 3, 4, 5, 7, 12, 20, 23]\n"
      ]
     }
    ],
@@ -251,26 +243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           ░ \n",
-      "q_0: ──────░─\n",
-      "           ░ \n",
-      "q_1: ──■───░─\n",
-      "       │   ░ \n",
-      "q_2: ──┼───░─\n",
-      "       │   ░ \n",
-      "q_3: ──┼───░─\n",
-      "     ┌─┴─┐ ░ \n",
-      "q_4: ┤ X ├─░─\n",
-      "     └───┘ ░ \n",
-      "q_5: ──────░─\n",
-      "           ░ \n"
+      "                                  ░                             ░ \n",
+      "q_0: ─────────────────────────────░─────────────────────────────░─\n",
+      "     ┌──────────────────────────┐ ░                             ░ \n",
+      "q_1: ┤ U(0.64278,4.4513,5.2312) ├─░─────────────────────────────░─\n",
+      "     ├──────────────────────────┤ ░  ┌───────────────────────┐  ░ \n",
+      "q_2: ┤ U(3.9313,0.87036,6.2186) ├─░──┤ U(1.482,4.993,5.8432) ├──░─\n",
+      "     ├─────────────────────────┬┘ ░ ┌┴───────────────────────┴┐ ░ \n",
+      "q_3: ┤ U(5.2879,1.3233,3.0957) ├──░─┤ U(5.2331,4.1709,5.3874) ├─░─\n",
+      "     ├─────────────────────────┤  ░ └─────────────────────────┘ ░ \n",
+      "q_4: ┤ U(1.3738,5.6985,3.4015) ├──░──────────────■──────────────░─\n",
+      "     ├─────────────────────────┤  ░            ┌─┴─┐            ░ \n",
+      "q_5: ┤ U(11.189,13.498,16.625) ├──░────────────┤ X ├────────────░─\n",
+      "     └─────────────────────────┘  ░            └───┘            ░ \n"
      ]
     }
    ],
