modify readme and 1-1

--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Installation of JanusQ\n",
     "JanusQ can be installed by docker, wheel, and soruce code. Docker is recommended, as all functions have been tested on it.\n",
-    "Linux (xxx) platform and Python (xxx) is prefered when instaling by wheel or soruce code.\n",
+    "Linux (Ubuntu 22.04 latest) platform and Python (3.10) is prefered when instaling by wheel or soruce code.\n",
     "\n",
     "**From docker.**\n",
     "Pull docker using docker \n",
@@ -16,7 +16,7 @@
     "The code is in \"/home/JanusQ-main\". The examples that can be directly run is in \"/home/JanusQ-main/examples\"\n",
     "\n",
     "**From wheel.**\n",
-    "Download janusq.whl from \"xxxx\".\n",
+    "Download janusq.whl from \"JanusQ-main/dist\".\n",
     "\n",
     "        pip install janusq.whl\n",
     "\n",
@@ -29,7 +29,21 @@
     "\n",
     "# Structure of JanusQ\n",
     "\n",
-    "TODO: 看看artifact写一下"
+    "- JanusCT\n",
+    "  - vectorization\n",
+    "  - fidelity preidiction\n",
+    "  - fidelity optimization\n",
+    "  - unitary decomposition\n",
+    "  - bug identification\n",
+    "- JanusFEM\n",
+    "  - readout calibration\n",
+    "- HyQSAT\n",
+    "  - solve sat domain problem\n",
+    "- time crystal\n",
+    "\n",
+    "# Note\n",
+    "1. Permission denied 'minisat_core'  \n",
+    "chmod +x janusq/hyqsat/minisat_core"
    ]
   },
   {
