--- a/examples/2-1.vectorization.ipynb
+++ b/examples/2-1.vectorization.ipynb
@@ -47,7 +47,7 @@
     "Below is the workflow to vectorize a gate in the quantum circuit. The gate is vectorized by two steps. The first step runs random walks to extract circuit features in the neighbor of the gates. the second step use a table comparison to generate the gate vector.\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"pictures/2-1.feature_extraction.png\"  width=\"70%\" height=\"70%\">\n",
+    "    <img src=\"pictures/2-1.feature_extraction.jpg\"  width=\"70%\" height=\"70%\">\n",
     "</div>"
    ]
   },
@@ -68,26 +68,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       ┌────────────────┐  ░ ┌───────────────────┐ ░ ┌────────────────┐ ░      »\n",
-      "q_0: ──┤ U(π/10,π,9π/5) ├──░─┤ U(8π/5,7π/5,9π/5) ├─░─┤ U(8π/5,9π/5,π) ├─░───■──»\n",
-      "     ┌─┴────────────────┴┐ ░ ├───────────────────┤ ░ └────────────────┘ ░   │  »\n",
-      "q_1: ┤ U(9π/5,7π/5,7π/5) ├─░─┤ U(2π/5,7π/5,9π/5) ├─░────────────────────░───┼──»\n",
-      "     └─┬────────────────┬┘ ░ └┬──────────────────┤ ░                    ░ ┌─┴─┐»\n",
-      "q_2: ──┤ U(9π/5,π,8π/5) ├──░──┤ U(π/5,7π/5,9π/5) ├─░─────────■──────────░─┤ X ├»\n",
-      "      ┌┴────────────────┤  ░  └──────────────────┘ ░       ┌─┴─┐        ░ └───┘»\n",
-      "q_3: ─┤ U(6π/5,7π/5,2π) ├──░───────────────────────░───────┤ X ├────────░──────»\n",
-      "      └─────────────────┘  ░                       ░       └───┘        ░      »\n",
-      "«      ░ \n",
-      "«q_0: ─░─\n",
-      "«      ░ \n",
-      "«q_1: ─░─\n",
-      "«      ░ \n",
-      "«q_2: ─░─\n",
-      "«      ░ \n",
-      "«q_3: ─░─\n",
-      "«      ░ \n",
+      "     ┌───────────────────┐ ░            ░            ░       ░ »\n",
+      "q_0: ┤ U(6π/5,2π/5,4π/5) ├─░───■────────░───■────────░───■───░─»\n",
+      "     ├───────────────────┤ ░   │        ░   │        ░ ┌─┴─┐ ░ »\n",
+      "q_1: ┤ U(2π/5,2π/5,π/10) ├─░───┼────■───░───┼────■───░─┤ X ├─░─»\n",
+      "     ├───────────────────┤ ░ ┌─┴─┐  │   ░ ┌─┴─┐  │   ░ └───┘ ░ »\n",
+      "q_2: ┤ U(9π/5,4π/5,4π/5) ├─░─┤ X ├──┼───░─┤ X ├──┼───░───────░─»\n",
+      "     └┬──────────────────┤ ░ └───┘┌─┴─┐ ░ └───┘┌─┴─┐ ░       ░ »\n",
+      "q_3: ─┤ U(4π/5,4π/5,π/5) ├─░──────┤ X ├─░──────┤ X ├─░───────░─»\n",
+      "      └──────────────────┘ ░      └───┘ ░      └───┘ ░       ░ »\n",
+      "«     ┌──────────────────┐ ░ \n",
+      "«q_0: ┤ U(π/5,4π/5,π/10) ├─░─\n",
+      "«     └──────────────────┘ ░ \n",
+      "«q_1: ─────────────────────░─\n",
+      "«                          ░ \n",
+      "«q_2: ─────────────────────░─\n",
+      "«                          ░ \n",
+      "«q_3: ─────────────────────░─\n",
+      "«                          ░ \n",
       "target gate: {'name': 'cx', 'qubits': [0, 2], 'params': []}\n",
-      "generate paths: {'cx,0,2-former-u,0', 'cx,0,2-former-u,0-former-u,1', 'cx,0,2', 'cx,0,2-former-u,0-parallel-cx,2,3', 'cx,0,2-former-cx,2,3', 'cx,0,2-former-u,0-former-u,2', 'cx,0,2-former-u,0-former-u,0'}\n"
+      "generate paths: {'cx,0,2-former-u,3', 'cx,0,2-parallel-cx,1,3-former-u,0', 'cx,0,2-parallel-cx,1,3-former-u,2', 'cx,0,2-parallel-cx,1,3-former-u,3', 'cx,0,2-former-u,0', 'cx,0,2-parallel-cx,1,3-former-u,1', 'cx,0,2', 'cx,0,2-former-u,1', 'cx,0,2-next-cx,1,3', 'cx,0,2-former-u,2', 'cx,0,2-parallel-cx,1,3'}\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 102/102 [00:01<00:00, 85.14it/s]"
+      "100%|██████████| 102/102 [00:01<00:00, 82.24it/s]"
      ]
     },
     {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vectorize a gate\n",
+    "# Gate Vectorization\n",
     "\n",
     "As mentioned above, the vectorization of a gate is performed by comparing the generated paths with a path table. In JanusQ, we provide a api to do this. Below is a example of it."
    ]
@@ -187,8 +187,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "vector is [0.5 0.5 0.  0.5 1.  0.5 0.  0.5 0.  0.  0.  0.  0.5 0.  0.  0.  0.  0.\n",
-      " 0.  0.  0.5 0.  0.  0.5 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
+      "vector is [0.5 0.5 0.5 0.5 0.  0.5 1.  0.  0.5 0.5 0.5 0.  0.  0.  0.  0.  0.  0.\n",
+      " 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
       " 0. ]\n"
      ]
     }
@@ -221,7 +221,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 3, 4, 5, 7, 12, 20, 23] = [0, 1, 3, 4, 5, 7, 12, 20, 23]\n"
+      "[0, 1, 2, 3, 5, 6, 8, 9, 10] = [0, 1, 2, 3, 5, 6, 8, 9, 10]\n"
      ]
     }
    ],
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Reconstruction\n",
+    "## Sub-circuit Reconstruction\n",
     "The vectorization of JanusQ-CT also allows the reconstruction of the sub-circuit around the gate by its vector."
    ]
   },
@@ -250,19 +250,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                                  ░                             ░ \n",
-      "q_0: ─────────────────────────────░─────────────────────────────░─\n",
-      "     ┌──────────────────────────┐ ░                             ░ \n",
-      "q_1: ┤ U(0.64278,4.4513,5.2312) ├─░─────────────────────────────░─\n",
-      "     ├──────────────────────────┤ ░  ┌───────────────────────┐  ░ \n",
-      "q_2: ┤ U(3.9313,0.87036,6.2186) ├─░──┤ U(1.482,4.993,5.8432) ├──░─\n",
-      "     ├─────────────────────────┬┘ ░ ┌┴───────────────────────┴┐ ░ \n",
-      "q_3: ┤ U(5.2879,1.3233,3.0957) ├──░─┤ U(5.2331,4.1709,5.3874) ├─░─\n",
-      "     ├─────────────────────────┤  ░ └─────────────────────────┘ ░ \n",
-      "q_4: ┤ U(1.3738,5.6985,3.4015) ├──░──────────────■──────────────░─\n",
-      "     ├─────────────────────────┤  ░            ┌─┴─┐            ░ \n",
-      "q_5: ┤ U(11.189,13.498,16.625) ├──░────────────┤ X ├────────────░─\n",
-      "     └─────────────────────────┘  ░            └───┘            ░ \n"
+      "      ┌─────────────────────────┐  ░ ┌─────────────────────────┐  ░ \n",
+      "q_0: ─┤ U(10.553,9.9895,17.016) ├──░─┤ U(0.807,5.6605,0.32924) ├──░─\n",
+      "      ├─────────────────────────┤  ░ ├─────────────────────────┴┐ ░ \n",
+      "q_1: ─┤ U(5.6308,4.7492,5.5351) ├──░─┤ U(0.86137,2.4252,5.7095) ├─░─\n",
+      "      └┬────────────────────────┤  ░ └──────────────────────────┘ ░ \n",
+      "q_2: ──┤ U(4.3527,6.241,4.3941) ├──░──────────────────────────────░─\n",
+      "     ┌─┴────────────────────────┴┐ ░ ┌─────────────────────────┐  ░ \n",
+      "q_3: ┤ U(0.61347,0.73213,1.9134) ├─░─┤ U(2.9688,1.7958,3.9023) ├──░─\n",
+      "     └┬──────────────────────────┤ ░ └─────────────────────────┘  ░ \n",
+      "q_4: ─┤ U(3.9272,0.4106,0.36822) ├─░──────────────────────────────░─\n",
+      "      └──────────────────────────┘ ░                              ░ \n",
+      "q_5: ──────────────────────────────░──────────────────────────────░─\n",
+      "                                   ░                              ░ \n"
      ]
     }
    ],
