--- a/examples/2-4.fidelity_optimization.ipynb
+++ b/examples/2-4.fidelity_optimization.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-15 12:04:43,339\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67092480 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
-      "2024-04-15 12:04:43,478\tINFO worker.py:1724 -- Started a local Ray instance.\n"
+      "2024-04-16 11:28:13,339\tWARNING services.py:1996 -- WARNING: The object store is using /tmp instead of /dev/shm because /dev/shm has only 67063808 bytes available. This will harm performance! You may be able to free up space by deleting files in /dev/shm. If you are inside a Docker container, you can increase /dev/shm size by passing '--shm-size=10.24gb' to 'docker run' (or add it to the run_options list in a Ray cluster config). Make sure to set this to more than 30% of available RAM.\n",
+      "2024-04-16 11:28:13,486\tINFO worker.py:1724 -- Started a local Ray instance.\n"
      ]
     }
    ],
@@ -75,7 +75,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 501/501 [00:04<00:00, 102.20it/s]\n"
+      "100%|██████████| 501/501 [00:04<00:00, 100.96it/s]\n"
      ]
     }
    ],
@@ -109,8 +109,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "400it [00:00, 717588.37it/s]\n",
-      "101it [00:00, 401159.76it/s]\n"
+      "400it [00:00, 618173.03it/s]\n",
+      "101it [00:00, 403452.10it/s]\n"
      ]
     }
    ],
@@ -124,17 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate a set of benchmarking circuits\n",
     "\n",
-    "from janusq.data_objects.algorithms import get_algs\n",
+    "from janusq.data_objects.algorithms import get_algorithm_circuits\n",
     "from janusq.optimizations.scheduling.scheduling_ct import Scheduler\n",
     "from janusq.optimizations.mapping.mapping_ct import Mapper\n",
     "algs = ['qft', 'hs', 'ising', 'qknn', 'qsvm', 'vqc', 'ghz', 'grover']\n",
-    "benchmarking_circuits = get_algs(n_qubits, backend, algs)"
+    "benchmarking_circuits = get_algorithm_circuits(n_qubits, backend, algs)"
    ]
   },
   {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "fig, axes = plt.subplots(figsize=(15, 5))  \n",
+    "fig, axes = plt.subplots(figsize=(8, 3))  \n",
     "x = [i for i in range(len(benchmarking_circuits))]\n",
     "x = np.array(x) * 20\n",
     "# axes.bar(x,reals_baseline,width =2,label='reals_baseline')\n",
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
