--- a/examples/3-2.readout_calibration_realqc.ipynb
+++ b/examples/3-2.readout_calibration_realqc.ipynb
@@ -55,9 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from janusq.dataset import matrices_ibu,ghz_error,benchmark_circuits\n",
-    "\n",
-    "benchmark_circuits_and_results = benchmark_circuits\n",
+    "from janusq.dataset import matrices_ibu,ghz_error, benchmark_circuits_and_results\n",
     "\n",
     "ghz_output = ghz_error\n",
     "\n",
@@ -119,8 +117,6 @@
    "outputs": [],
    "source": [
     "# Calibrate GHZ\n",
-    "\n",
-    "\n",
     "t_qufem_new = []\n",
     "qufem_fid = []\n",
     "\n",
