--- a/examples/1-1.install_janusq.ipynb
+++ b/examples/1-1.install_janusq.ipynb
@@ -33,21 +33,26 @@
     "\n",
     "- JanusCT\n",
     "  - vectorization\n",
+    "    - janusq/analysis/vectorization.py: This python script holds code related to the generation of path table and the vecterization of circuits\n",
     "  - fidelity preidiction\n",
+    "    - janusq/analysis/fidelity_prediction.py: This python script holds code related to training a model and using it to predict the fidelity of a circuit.\n",
     "  - fidelity optimization\n",
+    "    -  janusq/optimizations/mapping/mapping_ct.py：This python script holds code related to a typical compilation flow includes routing and scheduling. The routing pass transforms the circuit to satisfy the processor topology.\n",
     "  - unitary decomposition\n",
-    "  - bug identification\n",
+    "    - janusq/analysis/unitary_decompostion.py: This python script holds code related to takes a unitary as input and decomposes it into matrices of basic gates, resulting in an equivalent circuit.\n",
+    "  - bug identification: identify the potential bugs in the quantum algorithm implementation.\n",
     "- JanusFEM\n",
     "  - benchmarking.py. Generate a circuit for measuring calibration matrices.\n",
     "  - mitigation.py. Implement iterative calibration, which includes quantifying interactions between qubits and constructing Bayesian networks.\n",
     "  - tools.py. Implement data format conversion.\n",
     "- HyQSAT\n",
-    "  - solve sat domain problem\n",
+    "  - hyqsat/common: This dir stores common functions about cnf files, such as readCNF.\n",
+    "  - hyqsat/solveSatBy**.py: The main python function; use to solve sat problem.\n",
     "- time crystal\n",
     "\n",
     "### Note\n",
     "1. Permission denied 'minisat_core'  \n",
-    "chmod +x janusq/hyqsat/minisat_core"
+    "This file have no executable permission. You need run `chmod +x janusq/hyqsat/minisat_core` in bash."
    ]
   },
   {
