--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -65,39 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-16 11:48:36,408 - INFO: WARNING: for repeatability, setting FPU to use double precision\n",
-      "2024-04-16 11:48:36,408 - INFO: sys.path.append('/home/JanusQ-main/examples/../janusq/hyqsat/python/')\n",
-      "2024-04-16 11:48:36,409 - INFO: Quantum method:\n",
-      "2024-04-16 11:48:36,409 - INFO: /home/JanusQ-main/examples/cnf_examples/uf50-01.cnf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-16 11:48:37,618 - INFO: SATISFIABLE\n",
-      "2024-04-16 11:48:37,619 - INFO: SAT\n",
-      "2024-04-16 11:48:37,619 - INFO: -1 2 -3 4 5 6 7 8 9 -10 -11 12 -13 14 -15 -16 -17 -18 19 20 -21 -22 23 -24 -25 -26 27 -28 -29 -30 -31 -32 -33 -34 35 36 37 -38 39 -40 -41 -42 -43 -44 -45 -46 -47 48 49 -50 0\n",
-      "2024-04-16 11:48:37,619 - INFO: ^0 1 ^2 3 4 5 6 7 8 ^9 ^10 11 ^12 13 ^14 ^15 ^16 ^17 18 19 ^20 ^21 22 ^23 ^24 ^25 26 ^27 ^28 ^29 ^30 ^31 ^32 ^33 34 35 36 ^37 38 ^39 ^40 ^41 ^42 ^43 ^44 ^45 ^46 47 48 ^49\n",
-      "2024-04-16 11:48:37,620 - INFO: \n",
-      "2024-04-16 11:48:37,620 - INFO: \n",
-      "2024-04-16 11:48:37,621 - INFO: /home/JanusQ-main/examples/cnf_examples/uf50-01.cnf has been solved.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "{'isSatisfiable': True, 'isSat': True}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,50 +102,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-16 11:49:46,178 - INFO: WARNING: for repeatability, setting FPU to use double precision\n",
-      "2024-04-16 11:49:46,179 - INFO: Original method:\n",
-      "2024-04-16 11:49:46,179 - INFO: /home/JanusQ-main/examples/cnf_examples/uf50-01.cnf\n",
-      "2024-04-16 11:49:46,233 - INFO: ============================[ Problem Statistics ]=============================\n",
-      "2024-04-16 11:49:46,234 - INFO: |                                                                             |\n",
-      "2024-04-16 11:49:46,234 - INFO: |  Number of variables:            50                                         |\n",
-      "2024-04-16 11:49:46,234 - INFO: |  Number of clauses:             218                                         |\n",
-      "2024-04-16 11:49:46,235 - INFO: ============================[ Search Statistics ]==============================\n",
-      "2024-04-16 11:49:46,235 - INFO: | Conflicts |          ORIGINAL         |          LEARNT          | Progress |\n",
-      "2024-04-16 11:49:46,235 - INFO: |           |    Vars  Clauses Literals |    Limit  Clauses Lit/Cl |          |\n",
-      "2024-04-16 11:49:46,236 - INFO: ===============================================================================\n",
-      "2024-04-16 11:49:46,237 - INFO: ===============================================================================\n",
-      "2024-04-16 11:49:46,237 - INFO: restarts              : 1\n",
-      "2024-04-16 11:49:46,238 - INFO: conflicts             : 16             (277 /sec)\n",
-      "2024-04-16 11:49:46,238 - INFO: conflict cost         : 0.107 ms\n",
-      "2024-04-16 11:49:46,238 - INFO: decisions             : 36             (0.00 % random) (623 /sec)\n",
-      "2024-04-16 11:49:46,239 - INFO: decisions cost        : 0.044 ms\n",
-      "2024-04-16 11:49:46,240 - INFO: propagations          : 344            (5952 /sec)\n",
-      "2024-04-16 11:49:46,240 - INFO: propagations cost     : 0.215 ms\n",
-      "2024-04-16 11:49:46,240 - INFO: conflict literals     : 65             (19.75 % deleted)\n",
-      "2024-04-16 11:49:46,241 - INFO: actual CPU time       : 0.057791 s\n",
-      "2024-04-16 11:49:46,241 - INFO: this problem time     : 0.47 ms\n",
-      "2024-04-16 11:49:46,241 - INFO: annealing time        : 0 ms\n",
-      "2024-04-16 11:49:46,241 - INFO: quantum count         : 0\n",
-      "2024-04-16 11:49:46,242 - INFO: simulate time         : 0 s\n",
-      "2024-04-16 11:49:46,243 - INFO: quantum success number   : 0\n",
-      "2024-04-16 11:49:46,243 - INFO: quantum conflict number   : 0\n",
-      "2024-04-16 11:49:46,244 - INFO: quantum one time solve number   : 0\n",
-      "2024-04-16 11:49:46,244 - INFO: delta conflict time              : -1 ms\n",
-      "2024-04-16 11:49:46,244 - INFO: \n",
-      "2024-04-16 11:49:46,244 - INFO: SATISFIABLE\n",
-      "2024-04-16 11:49:46,245 - INFO: SAT\n",
-      "2024-04-16 11:49:46,245 - INFO: -1 2 -3 4 5 6 7 8 9 -10 -11 12 -13 14 -15 -16 -17 -18 19 20 -21 -22 23 -24 -25 -26 27 -28 -29 -30 -31 -32 -33 -34 35 36 37 -38 39 -40 -41 -42 -43 -44 -45 -46 -47 48 49 -50 0\n",
-      "2024-04-16 11:49:46,246 - INFO: ^0 1 ^2 3 4 5 6 7 8 ^9 ^10 11 ^12 13 ^14 ^15 ^16 ^17 18 19 ^20 ^21 22 ^23 ^24 ^25 26 ^27 ^28 ^29 ^30 ^31 ^32 ^33 34 35 36 ^37 38 ^39 ^40 ^41 ^42 ^43 ^44 ^45 ^46 47 48 ^49\n",
-      "2024-04-16 11:49:46,246 - INFO: \n",
-      "2024-04-16 11:49:46,247 - INFO: \n",
-      "2024-04-16 11:49:46,247 - INFO: /home/JanusQ-main/examples/cnf_examples/uf50-01.cnf has been solved.\n"
+      "2024-04-17 05:52:01,806 - INFO: WARNING: for repeatability, setting FPU to use double precision\n",
+      "2024-04-17 05:52:01,807 - INFO: Original method:\n",
+      "2024-04-17 05:52:01,808 - INFO: /JanusQ/examples/cnf_examples/uf50-01.cnf\n",
+      "2024-04-17 05:52:01,859 - INFO: ============================[ Problem Statistics ]=============================\n",
+      "2024-04-17 05:52:01,860 - INFO: |                                                                             |\n",
+      "2024-04-17 05:52:01,861 - INFO: |  Number of variables:            50                                         |\n",
+      "2024-04-17 05:52:01,862 - INFO: |  Number of clauses:             218                                         |\n",
+      "2024-04-17 05:52:01,863 - INFO: ============================[ Search Statistics ]==============================\n",
+      "2024-04-17 05:52:01,863 - INFO: | Conflicts |          ORIGINAL         |          LEARNT          | Progress |\n",
+      "2024-04-17 05:52:01,864 - INFO: |           |    Vars  Clauses Literals |    Limit  Clauses Lit/Cl |          |\n",
+      "2024-04-17 05:52:01,865 - INFO: ===============================================================================\n",
+      "2024-04-17 05:52:01,865 - INFO: ===============================================================================\n",
+      "2024-04-17 05:52:01,866 - INFO: restarts              : 1\n",
+      "2024-04-17 05:52:01,867 - INFO: conflicts             : 16             (285 /sec)\n",
+      "2024-04-17 05:52:01,869 - INFO: conflict cost         : 0.109 ms\n",
+      "2024-04-17 05:52:01,870 - INFO: decisions             : 36             (0.00 % random) (641 /sec)\n",
+      "2024-04-17 05:52:01,870 - INFO: decisions cost        : 0.042 ms\n",
+      "2024-04-17 05:52:01,871 - INFO: propagations          : 344            (6125 /sec)\n",
+      "2024-04-17 05:52:01,871 - INFO: propagations cost     : 0.213 ms\n",
+      "2024-04-17 05:52:01,872 - INFO: conflict literals     : 65             (19.75 % deleted)\n",
+      "2024-04-17 05:52:01,873 - INFO: actual CPU time       : 0.056159 s\n",
+      "2024-04-17 05:52:01,873 - INFO: this problem time     : 0.441 ms\n",
+      "2024-04-17 05:52:01,874 - INFO: annealing time        : 0 ms\n",
+      "2024-04-17 05:52:01,875 - INFO: quantum count         : 0\n",
+      "2024-04-17 05:52:01,875 - INFO: simulate time         : 0 s\n",
+      "2024-04-17 05:52:01,876 - INFO: quantum success number   : 0\n",
+      "2024-04-17 05:52:01,876 - INFO: quantum conflict number   : 0\n",
+      "2024-04-17 05:52:01,877 - INFO: quantum one time solve number   : 0\n",
+      "2024-04-17 05:52:01,878 - INFO: delta conflict time              : -1 ms\n",
+      "2024-04-17 05:52:01,879 - INFO: \n",
+      "2024-04-17 05:52:01,879 - INFO: SATISFIABLE\n",
+      "2024-04-17 05:52:01,880 - INFO: SAT\n",
+      "2024-04-17 05:52:01,883 - INFO: -1 2 -3 4 5 6 7 8 9 -10 -11 12 -13 14 -15 -16 -17 -18 19 20 -21 -22 23 -24 -25 -26 27 -28 -29 -30 -31 -32 -33 -34 35 36 37 -38 39 -40 -41 -42 -43 -44 -45 -46 -47 48 49 -50 0\n",
+      "2024-04-17 05:52:01,884 - INFO: ^0 1 ^2 3 4 5 6 7 8 ^9 ^10 11 ^12 13 ^14 ^15 ^16 ^17 18 19 ^20 ^21 22 ^23 ^24 ^25 26 ^27 ^28 ^29 ^30 ^31 ^32 ^33 34 35 36 ^37 38 ^39 ^40 ^41 ^42 ^43 ^44 ^45 ^46 47 48 ^49\n",
+      "2024-04-17 05:52:01,885 - INFO: \n",
+      "2024-04-17 05:52:01,885 - INFO: \n",
+      "2024-04-17 05:52:01,886 - INFO: /JanusQ/examples/cnf_examples/uf50-01.cnf has been solved.\n"
      ]
     },
     {
@@ -176,15 +153,13 @@
       "text/plain": [
        "{'restarts': 1,\n",
        " 'conflicts': 16,\n",
-       " 'conflict cost': 0.107,\n",
+       " 'conflict cost': 0.109,\n",
        " 'decisions': 0,\n",
        " 'propagations': 0,\n",
        " 'conflict literals': 65,\n",
-       " 'actual CPU time': 0.057791,\n",
-       " 'this problem time': 0.47,\n",
+       " 'actual CPU time': 0.056159,\n",
        " 'annealing time': 0.0,\n",
        " 'quantum count': 0,\n",
-       " 'simulate time': 0.0,\n",
        " 'quantum success number': 0,\n",
        " 'quantum conflict number': 0,\n",
        " 'quantum one time solve number': 0,\n",
@@ -192,14 +167,14 @@
        " 'isSat': True}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# solve by minisat\n",
-    "solve_by_minisat(file_path, verb=True, cpu_lim=cpu_lim, mem_lim=mem_lim)"
+    "solve_by_minisat(file_path, verb=False, cpu_lim=cpu_lim, mem_lim=mem_lim)"
    ]
   },
   {
