revise the time crystal

--- a/examples/4-1.solve_sat_domain_problem.ipynb
+++ b/examples/4-1.solve_sat_domain_problem.ipynb
@@ -17,16 +17,14 @@
     "\n",
     "A propositional satisfiability (SAT) problem is to find an assignment for each variable to satisfy a given Boolean formula. A typical SAT problem is composed of multiple clauses represented as a disjunction of Boolean variables. 3-SAT problem is a special case of the SAT problem that has no more than three variables in each clause. \n",
     "\n",
-    "3-SAT problem is a fundamental problem in various applications, such as artificial intelligence, circuit analysis, and protein structure prediction.  Since the 3-SAT problem is an NP-complete problem, the time complexity of classical algorithms increases exponentially with the numbers of clauses and variables. In this notebook, we introduce Janus-SAT, a hybrid approach that integrates quantum annealing （QA） with the classical Conflict-Driven Clause Learning (CDCL) algorithm to enable end-to-end acceleration for solving 3-SAT problems. \n",
+    "3-SAT problem is a fundamental problem in various applications, such as artificial intelligence, circuit analysis, and protein structure prediction. Since the 3-SAT problem is an NP-complete problem, the time complexity of classical algorithms increases exponentially with the number of clauses and variables. We observe that the classical CDCL algorithm has the advantage of solving larger problems, while QA is more suitable for solving small but hard problems. To combine their advantages, we introduce Janus-SAT in this notebook, a hybrid approach that integrates quantum annealing (QA) with the classical Conflict-Driven Clause Learning (CDCL) algorithm to enable end-to-end acceleration for solving 3-SAT problems. \n",
     "\n",
     "\n",
     "<div style=\"text-align:center;\">\n",
-    "    <img src=\"./pictures/4-1.hyqsat.png\"  width=\"50%\" height=\"50%\">\n",
+    "    <img src=\"./pictures/4-1.hyqsat.png\"  width=\"45%\" height=\"45%\">\n",
     "</div>\n",
     "\n",
-    "The figure above shows the workflow of Janus-CT. It features a cross-iterative process, where the CDCL algorithm leverages the interpretation results of QA to guide the search and sends new clauses to the QA hardware for acceleration. The frontend receives unsatisfied clauses from the decision step and finds hard clauses that need to be deployed to the QA hardware. We perform a breadth-first traversal to generate a clause queue, where the head clauses have higher priority to be accelerated by QA. We then embed the clauses following the order to the QA hardware under topology constraints. Our embedding scheme effectively eliminates the time-consuming routing and adjustment, which reduces the embedding time to linear complexity. To minimize noise overhead, we also adjust the coefficients in the QA objective function.\n",
-    "\n",
-    "The frontend generates the embedding configuration with normalized coefficients and sends them to the QA hardware for acceleration. QA only needs to execute one sample rather than multiple samples as errors can be resolved during the next CDCL conflict resolving. The backend reads the outputs, e.g., energy, and variable state, to guide the CDCL exploration. In the backend, we estimate the satisfaction probability of the embedded clauses and adapt several feedback strategies. Similar to classic CDCL, Janus-CT follows propagation and conflict resolving steps. If all clauses are satisfied, Janus-CT outputs “satisfiable”, or it tries to resolve the conflict and returns to the decision step. In a word, Janus-CT algorithm takes advantage of both quantum computing and classical computing."
+    "The figure above shows the workflow of Janus-CT. It features a cross-iterative process. The CDCL algorithm searches for the solution. During the search, it identifies and sends the hard sub-problem to QA. Janus-CT designed a fast compilation flow to embed the problem and optimize the noise. It also designs multiple strategies to guide the search of CDCL using the QA results."
    ]
   },
   {
